--- a/src/Paint.css
+++ b/src/Paint.css
@@ -69,6 +69,10 @@
     z-index: 5;
 }
 
+.platform-win32, .contentTEXT {
+    display: none;
+}
+
 .contentTEXT h1 {
     font-family: var(--font-text), sans-serif;
     font-weight: 400;
