--- a/src/frontend/stylesheet/paint.css
+++ b/src/frontend/stylesheet/paint.css
@@ -123,6 +123,7 @@
     display: flex;
     align-items: center;
     border-radius: 100vmax;
+    animation: toolbar_animation 400ms cubic-bezier(0.86, 0, 0.07, 1) forwards;
 }
 
 .control {
@@ -249,5 +250,16 @@ button {
 @media (max-width: 430px) {
     #brushSizeControl {
         display: none;
+    }
+}
+
+@keyframes toolbar_animation {
+    from {
+        opacity: 0;
+        transform: translateX(-50%) translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(-50%) translateY(0);
     }
 }
