--- a/src/frontend/stylesheet/paint.css
+++ b/src/frontend/stylesheet/paint.css
@@ -1,21 +1,14 @@
 /* 
-    PaintAPP/Paint.css
-
-    Essential app | Paint app
+    PaintAPP
     Made by Mint teams
-    Samuel lakamo , Peakk2011(Peakk)
-    Version 1.0 First release
     
-    Updated: 2025-23-08
-    With Seprate plain PaintAPP app
+    Updated: 2025-10-01
     License: MIT
-    GitHub: Peakk2011/Essential-app
 */
 
 :root {
-    --toolbar-bg: #ffffff;
-    --toolbar-border: #ddd;
-    --toolbar-shadow: rgba(0, 0, 0, 0.1);
+    --toolbar-bg: #f2f2f2;
+    --toolbar-border: hsl(0, 0%, 88%);
     --text-primary: #333;
     --text-secondary: #666;
     --input-border: #ccc;
@@ -26,7 +19,6 @@
 [data-theme="dark"] {
     --toolbar-bg: #080808;
     --toolbar-border: #444;
-    --toolbar-shadow: rgba(0, 0, 0, 0.3);
     --text-primary: #ffffff;
     --text-secondary: #cccccc;
     --input-border: #555;
@@ -38,7 +30,6 @@
     :root:not([data-theme="light"]) {
         --toolbar-bg: #080808;
         --toolbar-border: #444;
-        --toolbar-shadow: rgba(0, 0, 0, 0.3);
         --text-primary: #ffffff;
         --text-secondary: #cccccc;
         --input-border: #555;
@@ -47,16 +38,10 @@
     }
 }
 
-#GotoHomePage {
-    border-bottom: var(--TitlebarColorBorder);
-    background-color: var(--TitlebarColor) !important;
-    border-right: none !important;
-}
-
 #Titlebar-Dragable {
     -webkit-app-region: drag;
     width: 100%;
-    height: 45px;   
+    height: 38px;
     position: fixed;
     top: 0;
 }
@@ -69,18 +54,20 @@
     z-index: 5;
 }
 
-.platform-win32, .contentTEXT {
-    display: none;
+.platform-mac,
+.contentTEXT {
+    display: block;
 }
 
-.platform-mac, .contentTEXT {
-    display: block;
+.platform-win32,
+.contentTEXT {
+    display: none;
 }
 
 .contentTEXT h1 {
     font-family: var(--font-text), sans-serif;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 13.5px;
     letter-spacing: 0.2px;
     transform: translate(0px, 1.25px);
     color: var(--text-primary);
@@ -92,7 +79,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: auto;
     background: var(--canvas-bg);
 }
 
@@ -104,7 +91,7 @@
     height: 100%;
     cursor: crosshair;
     transform-origin: 0 0;
-    background-color: var(--canvas-bg); 
+    background-color: var(--canvas-bg);
     transition: background-color 0.3s, color 0.3s;
 }
 
@@ -117,12 +104,14 @@
     width: fit-content;
     background: var(--toolbar-bg);
     outline: var(--theme-border) solid 1.5px;
+    box-shadow: var(--ctx-menu-shadow);
     z-index: 1000;
     padding: 8px;
     gap: 2px;
     display: flex;
     align-items: center;
     border-radius: 100vmax;
+    animation: toolbar_animation 400ms cubic-bezier(0.86, 0, 0.07, 1) forwards;
 }
 
 .control {
@@ -193,8 +182,10 @@ input[type="range"] {
 
 input[type="range"]::-webkit-slider-runnable-track {
     height: 8px;
-    background: var(--input-border);
+    /* background: var(--input-border); */
+    background: var(--theme-border);
     border-radius: 100vmax;
+    outline: var(--input-border) solid 1px;
 }
 
 input[type="range"]::-webkit-slider-thumb {
@@ -203,17 +194,24 @@ input[type="range"]::-webkit-slider-thumb {
     width: 16px;
     height: 16px;
     background: var(--theme-accent);
+    outline: var(--input-border) solid 1.5px;
     border-radius: 50%;
-    margin-top: -4.25px;
+    /* margin-top: -4.25px; */
+    margin-top: -4px;
     cursor: pointer;
     position: relative;
     z-index: 1;
 }
 
+input[type="range"]:focus {
+    outline: none;
+}
+
 button {
     padding: 0.5rem 1rem;
     background: var(--theme-accent);
-    color: #000000;
+    color: var(--theme-accent-selection-texts);
+    outline: var(--theme-border) solid 1.5px;
     border: none;
     border-radius: 100vmax;
     cursor: pointer;
@@ -225,6 +223,7 @@ button {
 .clear-btn {
     background: transparent;
     color: var(--text-primary);
+    outline: transparent solid 1.5px;
 }
 
 .clear-btn:hover {
@@ -235,19 +234,27 @@ button {
     display: none;
 }
 
-@media (max-width: 340px) {
+@media (max-width: 380px) {
     .contentTEXT {
-        left: 17px;
+        left: 16px;
         transform: translateX(0px);
-    }
-
-    #GotoHomePage {
-        display: none;
     }
 }
 
 @media (max-width: 430px) {
     #brushSizeControl {
         display: none;
+    }
+}
+
+@keyframes toolbar_animation {
+    from {
+        opacity: 0;
+        transform: translateX(-50%) translateY(20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(-50%) translateY(0);
     }
 }
