--- a/src/frontend/stylesheet/tabbar.css
+++ b/src/frontend/stylesheet/tabbar.css
@@ -70,8 +70,12 @@
     border-radius: 0;
 
     transition: background-color 50ms ease;
-    animation: tabFadeIn 250ms ease-in-out;
+    animation: tabContainerFade 250ms ease-in-out;
     -webkit-app-region: no-drag;
+}
+
+.tab.tab-new {
+    animation: tabFadeIn 250ms ease-in-out;
 }
 
 .tab:hover {
@@ -166,6 +170,9 @@
     opacity: 90%;
 
     -webkit-app-region: no-drag;
+
+    position: fixed;
+    right: 0;
 }
 
 #new-tab-btn:hover {
@@ -245,5 +252,15 @@
     to {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+@keyframes tabContainerFade {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
     }
 }
