Make tabs more responsive, Components CSS files, Adjust new min-width window, Add Eraser features, Add 3 dots to toggle for some more options

--- a/src/frontend/stylesheet/tabbar.css
+++ b/src/frontend/stylesheet/tabbar.css
@@ -201,6 +201,7 @@
     flex: 1;
     height: calc(100% - 36px);
     overflow: hidden;
+    cursor: crosshair;
 
     transition: top 0.2s ease-in-out, height 0.2s ease-in-out;
 }
