--- a/src/frontend/stylesheet/paint.css
+++ b/src/frontend/stylesheet/paint.css
@@ -84,7 +84,6 @@
     display: flex;
     align-items: center;
     border-radius: 100vmax;
-    animation: toolbar_animation 400ms cubic-bezier(0.86, 0, 0.07, 1) forwards;
 }
 
 .control {
@@ -105,6 +104,7 @@ select {
     letter-spacing: 0.2px;
     border: solid 0px transparent;
     outline: solid 0px transparent;
+    cursor: pointer;
     background-color: transparent;
     transform: translateY(0.5px);
     transition: background 0.2s;
@@ -210,29 +210,4 @@ button {
 
 .size-display {
     display: none;
-}
-
-@media (max-width: 380px) {
-    .contentTEXT {
-        left: 16px;
-        transform: translateX(0px);
-    }
-}
-
-@media (max-width: 430px) {
-    #brushSizeControl {
-        display: none;
-    }
-}
-
-@keyframes toolbar_animation {
-    from {
-        opacity: 0;
-        transform: translateX(-50%) translateY(20px);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateX(-50%) translateY(0);
-    }
 }
