--- a/src/frontend/stylesheet/responsive.css
+++ b/src/frontend/stylesheet/responsive.css
@@ -1,3 +1,9 @@
+/* 
+PaintAPP - Responsive (responsive.css)
+Made by Mint teams
+Updated: 2025-18-01
+*/
+
 @media (max-width: 520px) {
     .toolbar-container {
         left: 47.5%;
